--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "fabric": "^2.7.0",
+        "vue-color": "^2.7.0",
         "vue-grid-layout": "^2.3.4",
         "vuex": "^3.1.0",
         "vuex-persist": "^2.0.0"
