--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dependencies": {
         "fabric": "^2.7.0",
         "vue-color": "^2.7.0",
+        "vue-draggable-resizable": "^2.0.0-rc1",
         "vue-grid-layout": "^2.3.4",
+        "vue-pose": "^0.5.0",
         "vuex": "^3.1.0",
         "vuex-persist": "^2.0.0"
     }
